<resources>
    <string name="app_name">MaintenanceApp</string>
    <string name="title">My Blog</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="name">Name</string>
    <string name="my_jobs">My Jobs</string>
    <string name="completed">Completed</string>
    <string name="on_hold">On Hold</string>
    <string name="in_progress">In Progress</string>
    <string name="not_started">Not Started</string>
    <string name="new_jobs">New Jobs</string>
    <string name="asset">Asset:</string>
    <string name="calibration_type">Type of Calibration:</string>
    <string name="notes">Notes:</string>
    <string name="priority">Priority:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="job">Job:</string>
    <string name="status">Status:</string>
    <string name="hold_reason">Hold Reason:</string>
    <string name="task_description">Task Description:</string>
    <string name="location">Location:</string>
    <string name="due_by">Due By:</string>
    <string name="on_hold_job">On Hold:</string>
    <string name="started">Started:</string>
    <string name="assigned_to">Assigned To:</string>
    <string name="signed_off">Signed Off:</string>
    <string name="start">Start</string>
    <string name="sign_off">Sign Off</string>
    <string name="close">Close</string>
    <string name="sign_off_date">Sign Off Date:</string>
    <string name="pass_fail">Pass/Fail:</string>
    <string name="measure">Measure:</string>
    <string name="upper">Upper:</string>
    <string name="lower">Lower:</string>
    <string name="actual_result">Actual Result:</string>
    <string name="result">Result:</string>
    <string name="overall_pass_fail">Overall Pass/Fail:</string>
    <string name="username">Username</string>
    <string name="new_job">New Job</string>
    <string-array name="calibration_type">
        <item>Item One</item>
        <item>Item Two</item>
    </string-array>
    <string-array name="priority_items">
        <item>Item one</item>
        <item>Item two</item>
    </string-array>
</resources>
